--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.29.0",
     "leaflet": "^1.9.4",
